Correction alignement block media text

--- a/css/scss/site/block/_media-text.scss
+++ b/css/scss/site/block/_media-text.scss
@@ -8,4 +8,13 @@
 			width: 100% !important;
 		}
 	}
+
+	.wp-block-media-text__content {
+		padding: 0 0 0 8%;
+	}
+	&.has-media-on-the-right {
+		.wp-block-media-text__content {
+			padding: 0 8% 0 0 !important;
+		}
+	}
 }
